--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
+    "redux-saga": "^0.16.2",
     "styled-components": "^4.0.3"
   },
   "scripts": {
