--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.2",
-    "styled-components": "^4.0.3"
+    "styled-components": "^4.0.3",
+    "styled-normalize": "^8.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
