--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.2",
     "styled-components": "^4.0.3",
-    "styled-normalize": "^8.0.3"
+    "styled-normalize": "^8.0.3",
+    "validator": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
