--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux-saga": "^0.16.2",
     "styled-components": "^4.0.3",
     "styled-normalize": "^8.0.3",
+    "uniqid": "^5.0.3",
     "validator": "^10.9.0"
   },
   "scripts": {
